<resources>
    <string name="app_name">Inmobiliaria Avaca</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_ubicacion">Ubicacion</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_inquilino">Inquilinos</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_inmueble">Inmuebles</string>
    <string name="menu_contrato">Contratos Vigentes</string>
    <string name="perfil">Perfil</string>
    <string name="holder_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="sign_in_short">Password</string>
</resources>