<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/placeholder"
            android:title="@string/menu_ubicacion" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/profile"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_inmueble"
            android:icon="@drawable/homepage"
            android:title="@string/menu_inmueble" />
        <item
            android:id="@+id/nav_inquilino"
            android:icon="@drawable/socialgroup"
            android:title="@string/menu_inquilino" />
        <item
            android:id="@+id/nav_contrato"
            android:icon="@drawable/contract"
            android:title="@string/menu_contrato" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>
</menu>